--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -16,12 +16,12 @@
         </header>
         <main>
             <div class="img-nav-buttons">
-                <a href="#one"><span>1</span></a> 
-                <a href="#two"><span>2</span></a>
-                <a href="#three"><span>3</span></a>
-                <a href="#four"><span>4</span></a>
-                <a href="#five"><span>5</span></a>
-                <a href="#six"><span>6</span></a> 
+                <a href="#one">1</a> 
+                <a href="#two">2</a>
+                <a href="#three">3</a>
+                <a href="#four">4</a>
+                <a href="#five">5</a>
+                <a href="#six">6</a> 
             </div>
             <div class="images-container">
                 <div class="img-holder" id="one">
